--- a/main/CanvasManifest.json
+++ b/main/CanvasManifest.json
@@ -117,8 +117,10 @@
     "UserLocale": "es-ES"
   },
   "ScreenOrder": [
+    "Screen1",
     "BrowseScreen1",
     "DetailScreen1",
-    "EditScreen1"
+    "EditScreen1",
+    "Screen2"
   ]
 }
