--- a/main/CanvasManifest.json
+++ b/main/CanvasManifest.json
@@ -26,17 +26,16 @@
       "delaycontrolrendering": true,
       "delayloadscreens": true,
       "disablecdsfileandlargeimage": false,
-      "disablecommandbar": false,
       "dynamicschema": false,
-      "enableactionenhancedcomponentproperties": false,
       "enableappembeddingux": false,
-      "enablebarcodereaderfeature": false,
       "enablechatbotfeature": false,
       "enablecomponentnamemaps": false,
       "enablecomponentscopeoldbehavior": false,
+      "enablecopilotcontrol": false,
       "enableeditcacherefreshfrequency": false,
       "enableexcelonlinebusinessv2connector": true,
       "enableideaspanel": true,
+      "enablelegacybarcodescanner": false,
       "enableonstart": true,
       "enableonstartnavigate": false,
       "enablepcfmoderndatasets": true,
@@ -46,7 +45,6 @@
       "enablerulespanel": false,
       "enableruntimepolicies": false,
       "enablesaveloadcleardataonweb": false,
-      "enhancedcomponentfunctionproperty": false,
       "enhanceddelegation": true,
       "enhancedgalleryinitialization": true,
       "errorhandling": true,
